tests/dataset/tpc-ds/compiler/c/q58.error
/tmp/TestCCompiler_TPCDS_Goldenq584078333866/001/prog.c: In function ‘test_TPCDS_Q58_simplified’:
/tmp/TestCCompiler_TPCDS_Goldenq584078333866/001/prog.c:201:51: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  201 |   if (test_TPCDS_Q58_simplified_result.len != tmp1.len) {
      |                                                   ^
      |                                                   ->
/tmp/TestCCompiler_TPCDS_Goldenq584078333866/001/prog.c:205:60: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  205 |       if (test_TPCDS_Q58_simplified_result.data[i3] != tmp1.data[i3]) {
      |                                                            ^
      |                                                            ->
/tmp/TestCCompiler_TPCDS_Goldenq584078333866/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq584078333866/001/prog.c:245:38: error: incompatible types when assigning to type ‘list_int’ from type ‘result_t *’
  245 |   test_TPCDS_Q58_simplified_result = result;
      |                                      ^~~~~~
