tests/dataset/tpc-ds/compiler/c/q58.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int item_id;
  double average;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item_id;
  double ss_item_rev;
} ss_items_item_t;
typedef struct {
  int len;
  ss_items_item_t *data;
} ss_items_item_list_t;
ss_items_item_list_t create_ss_items_item_list(int len) {
  ss_items_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ss_items_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item_id;
  double cs_item_rev;
} cs_items_item_t;
typedef struct {
  int len;
  cs_items_item_t *data;
} cs_items_item_list_t;
cs_items_item_list_t create_cs_items_item_list(int len) {
  cs_items_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(cs_items_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item_id;
  double ws_item_rev;
} ws_items_item_t;
typedef struct {
  int len;
  ws_items_item_t *data;
} ws_items_item_list_t;
ws_items_item_list_t create_ws_items_item_list(int len) {
  ws_items_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ws_items_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item_id;
  double average;
} result_t;
typedef struct {
  int len;
  result_t *data;
} result_list_t;
result_list_t create_result_list(int len) {
  result_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q58_simplified_result;
static void test_TPCDS_Q58_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.item_id = 1, .average = 58.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q58_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q58_simplified_result.len; i3++) {
      if (test_TPCDS_Q58_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  ss_items_item_t ss_items =
      (ss_items_item_t){.item_id = 1, .ss_item_rev = 50.0};
  cs_items_item_t cs_items =
      (cs_items_item_t){.item_id = 1, .cs_item_rev = 60.0};
  ws_items_item_t ws_items =
      (ws_items_item_t){.item_id = 1, .ws_item_rev = 64.0};
  double avg =
      (ss_items.ss_item_rev + cs_items.cs_item_rev + ws_items.ws_item_rev) /
      3.0;
  result_t result[] = {(result_t){.item_id = ss_items.item_id, .average = avg}};
  int result_len = sizeof(result) / sizeof(result[0]);
  printf("[");
  for (int i4 = 0; i4 < result_len; i4++) {
    if (i4 > 0)
      printf(",");
    result_t it = result[i4];
    printf("{");
    _json_string("item_id");
    printf(":");
    _json_int(it.item_id);
    printf(",");
    _json_string("average");
    printf(":");
    _json_float(it.average);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q58_simplified_result = result;
  test_TPCDS_Q58_simplified();
  return 0;
}
